--- a/Latihan/latihan2/T2243040065.html
+++ b/Latihan/latihan2/T2243040065.html
@@ -3,16 +3,16 @@
         <Title>Table</Title>
     </head>
 <body>
-    <table width="0%" border="2" cellspacing="3" cellpadding="10"bgcolor="lightyellow"</table>
+    <table width="0%" border="2" cellspacing="3" cellpadding="10"bgcolor="lightyellow"></table>
         <tr>
-            <th colspan="40" bgcolor="blue">Curiculum Vitae </th>
+            <th colspan="40" bgcolor="blue">Curiculum Vitae> </th>
         </tr>
         <tr>
             <td>No</td>
             <td>:</td>
             <td>Zildan Majid Aminuddin</td>
             <td rowspan="6">
-            <img src="foto zildan.jpeg" width="215"</td>
+            <img src="fotozildan.jpg" width="215"></td>
         </tr>
         <tr>
             <td>Jenis Kelamin</td>
@@ -53,9 +53,9 @@
             <th colspan="40">hoby</th>
         </tr>
         <tr>
-            <td> <img src="th (3).jpeg" width="150"</td></td>
-            <td> <img src="th (4).jpeg" width="150"</td></td>
-            <td> <img src="th.jpeg" width="150"</td></td>
-            <td> <img src="th (5).jpeg" width="150"</td></td>
+            <td> <img src="fotogaming.jpg" width="150"></td></td>
+            <td> <img src="images bl.jpg" width="150"></td></td>
+            <td> <img src="imagesug.jpg" width="150"></td></td>
+            <td> <img src="lagrandeindonesia12.jpg" width="150"></td></td>
         </tr>
       
