selesai mengerjakan latihan 6

--- a/tugas1/T1243040065.html
+++ b/tugas1/T1243040065.html
@@ -5,7 +5,7 @@
         <body BGCOLOR="green">
     <h1 ALIGN="center">CURICULUM VITAE</h1>
     <hr>
-    <image src="foto.jpg.jpeg" ALIGN="right" width="200" ></align>
+    <image src="fotozildan.jpg" ALIGN="right" width="200" ></align>
     
     <table>
         <tr>
